--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,41 @@
 * {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
 }
 
-@keyframes loginslider {
-  from {left: -1800px;}
-  to {left: 0;}
-}
-
-.login {
+body {
+  background-color: #D5F3FE;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  animation-name: loginslider;
-  animation-duration: 4s;
 }
 
 .form-login {
   display: flex;
   flex-direction: column;
+  position: relative;
+  background-color: #FFF;
   width: 20%;
   border: 2px solid gray;
   border-radius: 10px;
-  padding: 40px;
+  padding: 40px; 
+}
+
+.nono {
+  animation-name: no-no;
+  animation-duration: 0.3s;
+  animation-timing-function: linear;
+  border: 2px solid red;
+
+}
+
+@keyframes no-no {
+  0% {left: 0px;}
+  20% {left: -20px;}
+  40% {left: 20px;}
+  60% {left: -20px;}
+  80% {left: 20px;}
+  100% {left: 0px;}
 }
 
 .form-login input, button {
@@ -51,6 +62,6 @@
   background-color:cornflowerblue;
   font-weight: bold;
   color: #fff;
-  transition: all 0.7s;
+  transition: all 0.3s;
   transform: scale(1.03);
 }
